<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="service_question_message">How was the service ?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">Ok (15%)</string>
    <string name="calculate">calculate</string>
    <string name="tip_amount">Tip amount: %s</string>
    <string name="round_up_tip_question">Round up tip ?</string>
</resources>