<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_store"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cost_of_service_til"
            app:layout_constraintBottom_toBottomOf="@+id/cost_of_service_til"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service_til"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/service_question_tv"
            app:layout_constraintBottom_toBottomOf="@+id/service_question_tv" />

        <TextView
            android:id="@+id/service_question_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_question_message"
            app:layout_constraintStart_toEndOf="@+id/icon_service_question"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_service_til"
            android:layout_margin="16dp"
            style="@style/Widget.TipTime.TextView"/>

        <RadioGroup
            android:id="@+id/tip_options_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/service_question_tv"
            app:layout_constraintTop_toBottomOf="@+id/service_question_tv"
            android:checkedButton="@id/tip_eighteen_rb">

            <RadioButton
                android:id="@+id/tip_twenty_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:text="@string/amazing_20"/>

            <RadioButton
                android:id="@+id/tip_eighteen_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:text="@string/good_18"/>

            <RadioButton
                android:id="@+id/tip_fifteen_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:text="@string/ok_15"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_round_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/round_tip_switch"
            app:layout_constraintBottom_toBottomOf="@+id/round_tip_switch" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_tip_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/round_up_tip_question"
            app:layout_constraintTop_toBottomOf="@id/tip_options_rg"
            app:layout_constraintStart_toEndOf="@+id/icon_round_up"
            app:layout_constraintEnd_toEndOf="parent"
            android:checked="true"
            style="@style/Widget.TipTime.CompoundButton.Switch"
            android:layout_marginStart="16dp"/>

        <Button
            android:id="@+id/calculate_bt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_tip_switch"
            android:layout_marginTop="8dp"
            android:text="@string/calculate"/>

        <TextView
            android:id="@+id/tip_result_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/calculate_bt"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:text="@string/tip_amount"
            tools:text="Tip amount: $ 14.32"
            style="@style/Widget.TipTime.TextView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>